--- a/packagetool/04打包其他样式资源/src/index.html
+++ b/packagetool/04打包其他样式资源/src/index.html
@@ -6,10 +6,7 @@
     <title>webpack</title>
 </head>
 <body>
-    <div class="box1"></div>
-    <div class="box2"></div>
-    <div class="box3"></div>
-
-    <img src="./1d77fa2f0e.jpg">
-<script src="./built.js"></script></body>
+    <span class="iconfont icon-eyeclose_huaban1"></span>
+    <span class="iconfont icon-phone2_huaban1"></span>
+</body>
 </html>
