--- a/packagetool/13生产环境配置/src/index.html
+++ b/packagetool/13生产环境配置/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>主页</title>
+    <title>webpoack</title>
 </head>
 <body>
-   <h2>我是主页啊</h2>
+    <h2>nihao</h2>
 </body>
 </html>
